z-index issue with navbar corrected

--- a/app/assets/stylesheets/experiences/_index.scss
+++ b/app/assets/stylesheets/experiences/_index.scss
@@ -15,7 +15,7 @@
     border-radius: 3px;
     padding: 10px 10px;
     margin-bottom: 5px;
-    z-index: 9999;
+    z-index: 5;
     text-align: center;
     position: sticky;
     top: 0;
